# Yadaac

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: yadaacConfig.cmake.in
docs/: API.md
include/yadaac/: base.hpp  builder.hpp  stream.hpp  stream_utils.hpp  yadaac.hpp
include/yadaac/detail/: base_allocator.hpp  builder_impl.hpp  state.hpp
tests/: BaseAllocatorTest.cpp  CMakeLists.txt  DAACConstructionTest.cpp  StreamTest.cpp  StreamUtilsTest.cpp
